// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popover /> when popover is closed renders correctly 1`] = `
<div>
  <OnClickOutside(Base)
    eventTypes={
      Array [
        "mousedown",
        "touchstart",
      ]
    }
    excludeScrollbar={false}
    modifiers={
      Object {
        "preventOverflow": Object {
          "enabled": false,
        },
      }
    }
    outsideClickIgnoreClass="ignore-react-onclickoutside"
    preventDefault={false}
    stopPropagation={false}
  >
    <Base
      disableOnClickOutside={[Function]}
      enableOnClickOutside={[Function]}
      eventTypes={
        Array [
          "mousedown",
          "touchstart",
        ]
      }
      modifiers={
        Object {
          "preventOverflow": Object {
            "enabled": false,
          },
        }
      }
      outsideClickIgnoreClass="ignore-react-onclickoutside"
      preventDefault={false}
      stopPropagation={false}
      zIndex={1}
    >
      <Manager>
        <Reference>
          <InnerReference
            setReferenceNode={[Function]}
          >
            <Box>
              <div
                className="css-ki38jf-Box emotion-0"
              >
                <button
                  disabled={false}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  Open popover
                </button>
              </div>
            </Box>
          </InnerReference>
        </Reference>
      </Manager>
    </Base>
  </OnClickOutside(Base)>
</div>
`;

exports[`<Popover /> when popover is open renders correctly 1`] = `
.emotion-6 {
  z-index: 1;
  z-index: 1;
}

.emotion-2 {
  height: 0;
  width: 0;
  border: solid transparent;
  border-width: 0.75rem;
  position: absolute;
}

.emotion-4 {
  height: 0;
  width: 0;
  border: solid transparent;
  border-width: 0.75rem;
  position: absolute;
}

<div>
  <OnClickOutside(Base)
    eventTypes={
      Array [
        "mousedown",
        "touchstart",
      ]
    }
    excludeScrollbar={false}
    modifiers={
      Object {
        "preventOverflow": Object {
          "enabled": false,
        },
      }
    }
    outsideClickIgnoreClass="ignore-react-onclickoutside"
    preventDefault={false}
    stopPropagation={false}
  >
    <Base
      disableOnClickOutside={[Function]}
      enableOnClickOutside={[Function]}
      eventTypes={
        Array [
          "mousedown",
          "touchstart",
        ]
      }
      modifiers={
        Object {
          "preventOverflow": Object {
            "enabled": false,
          },
        }
      }
      outsideClickIgnoreClass="ignore-react-onclickoutside"
      preventDefault={false}
      stopPropagation={false}
      zIndex={1}
    >
      <Manager>
        <Reference>
          <InnerReference
            setReferenceNode={[Function]}
          >
            <Box>
              <div
                className="emotion-0 emotion-1"
              >
                <button
                  disabled={true}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  Open popover
                </button>
              </div>
            </Box>
          </InnerReference>
        </Reference>
        <Popper
          modifiers={
            Object {
              "preventOverflow": Object {
                "enabled": false,
              },
            }
          }
        >
          <InnerPopper
            eventsEnabled={true}
            modifiers={
              Object {
                "preventOverflow": Object {
                  "enabled": false,
                },
              }
            }
            placement="bottom"
            positionFixed={false}
            referenceElement={
              <div
                class="emotion-0 emotion-1"
              >
                <button
                  disabled=""
                >
                  Open popover
                </button>
              </div>
            }
          >
            <ContentWrapper
              aria-hidden="true"
              className="ignore-react-onclickoutside"
              style={
                Object {
                  "left": 0,
                  "opacity": 0,
                  "pointerEvents": "none",
                  "position": "absolute",
                  "top": 0,
                }
              }
              zIndex={1}
            >
              <div
                aria-hidden="true"
                className="ignore-react-onclickoutside emotion-6 emotion-7"
                style={
                  Object {
                    "left": 0,
                    "opacity": 0,
                    "pointerEvents": "none",
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                <p
                  key=".1"
                >
                  Popover contents
                </p>
                <TriangleBorder
                  style={Object {}}
                >
                  <div
                    className="emotion-2 emotion-3"
                    style={Object {}}
                  />
                </TriangleBorder>
                <Triangle
                  style={Object {}}
                >
                  <div
                    className="emotion-4 emotion-5"
                    style={Object {}}
                  />
                </Triangle>
              </div>
            </ContentWrapper>
          </InnerPopper>
        </Popper>
      </Manager>
    </Base>
  </OnClickOutside(Base)>
</div>
`;
